--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                             <a class="nav-link category-link" data-category="GROCERY">GROCERY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="VEGETABLES">VEGETABLES</a>
+                            <a class="nav-link category-link" data-category="CUTLARY">CUTLARY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="DAIRY">DAIRY</a>
+                            <a class="nav-link category-link" data-category="CLEANING MATERIALS">CLEANING MATERIALS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link category-link" data-category="STATIONERY">STATIONERY</a>
@@ -141,7 +141,7 @@
                             <a class="nav-link category-link" data-category="FRUITS">FRUITS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="BAKERY">BAKERY</a>
+                            <a class="nav-link category-link" data-category="COSMETICS">COSMETICS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link category-link" data-category="BABY CARE">BABY CARE</a>
