adjust delivery charge, fix showing mrp at checkout

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <p><b>ONLINE SUPER MARKET</b></p>
                     <p><b>EDAVANNAPPARA</b></p>
                     <p><b><i>Stay Safe , Shop Online..</i></b><b><i></i></b><b><i></i></b></p>
+                    <p>Delivery free for purchasing above ₹500/-</p>
                 </div>
             </div>
         </section>
@@ -187,7 +188,7 @@
                     </button>
                 </div>
                 <input type="hidden"
-                    value="{&quot;active&quot;:true,&quot;charge&quot;:&quot;40&quot;,&quot;message&quot;:&quot;Delivery Charge&quot;,&quot;threshold&quot;:&quot;1000&quot;,&quot;options&quot;:[&quot;Home Delivery&quot;]}"
+                    value="{&quot;active&quot;:true,&quot;charge&quot;:&quot;30&quot;,&quot;message&quot;:&quot;Delivery Charge&quot;,&quot;threshold&quot;:&quot;500&quot;,&quot;options&quot;:[&quot;Home Delivery&quot;]}"
                     id="options">
 
                 <div class="modal-body">
