--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section id="about" style="">
             <div class="container text-center">
                 <div class="navbar sub">
-                    <p><b>ONLINE SUPER MARKET</b></p>
+                    <p><b>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ്</b></p>
                     <p><b>EDAVANNAPPARA</b></p>
                     <p>Delivery free for purchasing above ₹500/-</p>
                 </div>
@@ -101,7 +101,7 @@
                             <label for="search-input"><i class="fa fa-search" aria-hidden="true"></i><span
                                     class="sr-only">Search icons</span></label>
                             <input id="search-input" onkeyup="search()" class="form-control input-lg"
-                                placeholder="Search..." autocomplete="off" spellcheck="false" autocorrect="off"
+                                placeholder="തിരയുക.." autocomplete="off" spellcheck="false" autocorrect="off"
                                 tabindex="1">
                             <a id="search-clear" href="#" class="fa fa-times-circle hide" aria-hidden="true"><span
                                     class="sr-only">Clear search</span></a>
@@ -111,31 +111,31 @@
                 <div class="row justify-content-center">
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link category-link all-category active" data-category="*">All</a>
+                            <a class="nav-link category-link all-category active" data-category="*">All<br>എല്ലാം</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="GROCERY">GROCERY</a>
+                            <a class="nav-link category-link" data-category="GROCERY">GROCERY<br>പലചരക്ക്</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="SNACKS AND DRINKS">SNACKS AND DRINKS</a>
+                            <a class="nav-link category-link" data-category="SNACKS AND DRINKS">SNACKS AND DRINKS<br>സ്നാക്സും ഡ്രിങ്കുകളും</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="CAKES AND BAKES">CAKES AND BAKES</a>
+                            <a class="nav-link category-link" data-category="CAKES AND BAKES">CAKES AND BAKES<br>കേക്കുകളും ബേക്കുകളും</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="HOME NEEDS">HOME NEEDS</a>
+                            <a class="nav-link category-link" data-category="HOME NEEDS">HOME NEEDS<br>വീട്ടാവശ്യങ്ങൾ </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="BABY CARE">BABY CARE</a>
+                            <a class="nav-link category-link" data-category="BABY CARE">BABY CARE<br>കുട്ടികൾക്ക് </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="STATIONARY">STATIONARY</a>
+                            <a class="nav-link category-link" data-category="STATIONARY">STATIONARY<br>സ്റ്റേഷനറി</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="CLEANING MATERIALS">CLEANING MATERIALS</a>
+                            <a class="nav-link category-link" data-category="CLEANING MATERIALS">CLEANING<br>ക്ലീനിംഗ്</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="COSMETICS">COSMETICS</a>
+                            <a class="nav-link category-link" data-category="COSMETICS">COSMETICS<br>കോസ്മെറ്റിക്സ്</a>
                         </li>
                     </ul>
                 </div>
@@ -230,15 +230,15 @@
                                         <div class="form-group">
                                             <label for="cname">Name</label>
                                             <input type="text" id="cname" class="form-control"
-                                                placeholder="Enter Your Name" value="me">
+                                                placeholder="Enter Your Name" value="">
                                             <span id="error-name" style="color: red"></span>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-group">
                                             <label for="cphone">Mobile</label>
-                                            <input type="text" id="cphone" class="form-control"
-                                                placeholder="Enter Your Mobile Number" value="1234567890">
+                                            <input type="tel" id="cphone" class="form-control"
+                                                placeholder="Enter Your Mobile Number" value="">
                                             <span id="error-phone" style="color: red"></span>
                                         </div>
                                     </div>
@@ -249,7 +249,7 @@
                                                 <label for="caddress" class="">Enter Address</label>
                                             </div>
                                             <textarea class="form-control caddress" id="caddress"
-                                                placeholder="Enter Address" rows="5">nte veed</textarea>
+                                                placeholder="Enter Address" rows="5"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-12 address-area czip">
