add cloud stuff

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             hook: hook,
                             pay_online: pay_online,
                             shop_id: shop_id,
-                            _token: "nOt43AIWiyVr0X4GudEh8lBCUSRPgy416Gy2L0Y0",
+                            // _token: "nOt43AIWiyVr0X4GudEh8lBCUSRPgy416Gy2L0Y0",
                         }
 
                         var message = formatMessage(items, total, price, order_note, extra_charge, identifier, delivery, customer_name, customer_address, customer_phone, customer_zip, customer_location);
