--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <meta http-equiv="refresh" content="3600">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baumans">
+
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -48,44 +50,28 @@
     <!-- custom css -->
     <link rel="stylesheet" href="files/style.css">
 
-    <style>
-        /* header css */
-        header {
-            background-color: #ffffff !important;
-        }
-
-        .brand-name {
-            color: #ff0000;
-            font-size: 2em;
-        }
-
-        #map-canvas {
-            width: 100%;
-            height: 44vh;
-        }
-    </style>
 
 <body>
 
     <!-- start header -->
     <header>
         <div class="container">
-            <div class="brand-logo">
+            <!-- <div class="brand-logo">
                 <img src="images/logo.png" class="d-inline-block align-top product_img" alt="">
-            </div>
+            </div> -->
             <div class="brand-name text-center">
-                <span class="">SafeWay</span>
+                <span class="fontsforweb_fontid_2802"><strong>SAFEWAY</strong></span>
             </div>
         </div>
     </header>
     <!-- end header -->
     <main>
         <!-- start About content -->
-        <section id="about" style="">
+        <section id="about">
             <div class="container text-center">
                 <div class="navbar sub">
-                    <p><b>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ്</b></p>
-                    <p><b>EDAVANNAPPARA</b></p>
+                    <p>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ്</p>
+                    <p><b>EDAVANNAPPARA <a href="tel:+919745067846">9745067846</a></b></p>
                     <p>Delivery free for purchasing above ₹500/-</p>
                 </div>
             </div>
