better order design

--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
                         }
 
                         var data = {
+                            time: Date.now(),
                             items: items,
                             total: $.trim(total),
                             order_note: order_note,
