--- a/orders/index.html
+++ b/orders/index.html
@@ -7,10 +7,44 @@
     <title>Safeway Delivery Order Detail</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="/files/style.css">
+    <link href="/files/css2.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="content">...</div>
+    <header>
+        <div class="container">
+            <!-- <div class="brand-logo">
+                <img src="images/logo.png" class="d-inline-block align-top product_img" alt="">
+            </div> -->
+            <div class="brand-name text-center">
+                <span class="fontsforweb_fontid_2802"><strong>SAFEWAY</strong></span>
+            </div>
+        </div>
+    </header>
+    <!-- end header -->
+    <main>
+        <!-- start About content -->
+        <section id="about">
+            <div class="container text-center">
+                <div class="navbar sub">
+                    <p>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ്</p>
+                    <p><b>EDAVANNAPPARA <a href="tel:+919745067846">9745067846</a></b></p>
+                </div>
+            </div>
+        </section>
+        <div class="container">
+            <h4>Order Summary</h4>
+            <div id="content">...</div>
+        </div>
+        <footer class="footer bg-light text-dark">
+            <div class="container">
+                <p class="text-center font-weight-light text-muted">Safeway Edavannappara<strong></strong></p>
+            </div>
+        </footer>
+    </main>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
@@ -35,10 +69,7 @@ https://firebase.google.com/docs/web/setup#available-libraries -->
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
-
             var db = firebase.firestore();
-            console.log("this is the database");
-            console.log(db);
             var orders = db.collection("orders");
             db.collection("orders").doc(orderid)
                 .get()
@@ -58,37 +89,41 @@ https://firebase.google.com/docs/web/setup#available-libraries -->
                         </tr>`
                     });
                     divcontent = `<div>
+                                    <div style="text-align: right;">`+new Date(data["time"]).toLocaleString()+`</div>
                                     <table>
                                         <tbody>
                                             <tr>
-                                                <td><b>Name<b></td>
+                                                <td><b>Name</b></td>
                                                 <td>`+ data["name"] + `</td>
                                             </tr>
                                             <tr>
-                                                <td>Phone</td>
+                                                <td><b>Phone</b></td>
                                                 <td><a href="tel:+91`+ data["phone"] + `">` + data["phone"] + `</a></td>
                                             </tr>
                                             <tr>
-                                                <td>Address</td>
+                                                <td><b>Address</b></td>
                                                 <td>`+ (data["address"].replaceAll("\n", "<br>")) + `</td>
                                             </tr>
                                             <tr>
-                                                <td>Pin Code</td>
+                                                <td><b>Pin Code</b></td>
                                                 <td>`+ data["zip"] + `</td>
                                             </tr>
                                             <tr>
-                                                <td>Note</td>
+                                                <td><b>Note</b></td>
                                                 <td>`+ (data["order_note"].replaceAll("\n", "<br>")) + `</td>
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <p>Items</p>
+                                    <hr>
+                                    <h5>ITEMS</h5>
                                     <table>
                                         <tbody>`+ table + ` </tbody>
                                     </table>
+                                    <hr>
                                     <p>Delivery charge: ₹`+ +data["extra_charge"] + `</p>
-                                    <p>Total Payable: `+ data["total"] + `</p>
-                                    <p>contact Safeway for any queries: <a href="tel:+919745067846">9745067846</a></p>
+                                    <p>Total Payable: <b>`+ data["total"] + `</b></p>
+                                    <hr>
+                                    <p>Contact Safeway: <a href="tel:+919745067846">9745067846</a></p>
                                 </div>`;
 
                     cont.innerHTML = (divcontent);
