--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
                             <a class="nav-link category-link" data-category="GROCERY">GROCERY<br>പലചരക്ക്</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link category-link" data-category="SNACKS">SNACKS<br>സ്നാക്സ്</a>
+                            <a class="nav-link category-link" data-category="SNACKS AND DRINKS">SNACKS AND
+                                DRINKS<br>സ്നാക്സും ഡ്രിങ്കുകളും</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link category-link" data-category="CAKES AND BAKES">CAKES AND
-                                BAKES<br>കേക്കും ബേയ്ക്കും </a>
+                                BAKES<br>കേക്കുകളും ബേക്കുകളും</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link category-link" data-category="HOME NEEDS">HOME NEEDS<br>വീട്ടാവശ്യങ്ങൾ
