--- a/orders/index.html
+++ b/orders/index.html
@@ -75,13 +75,13 @@ https://firebase.google.com/docs/web/setup#available-libraries -->
                 .get()
                 .then(function (doc) {
                     var data = doc.data();
-                    console.log(data);
+                    // console.log(data);
                     var cont = document.getElementById("content");
-                    console.log(cont);
+                    // console.log(cont);
                     table = ""
                     var count = 1;
                     data.items.forEach(element => {
-                        console.log(element);
+                        // console.log(element);
                         table += `<tr>
                             <td>`+ count + `<td>
                             <td><img src="/`+ element["product_image"] + `" width="50" height="50"><td>
