--- a/index_original.html
+++ b/index_original.html
@@ -26,11 +26,9 @@
     <meta property="og:type" content="website">
 
     <meta http-equiv="refresh" content="3600">
+    <link rel="icon" href="files/icon.png">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baumans">
-
-
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -56,9 +54,9 @@
     <!-- start header -->
     <header>
         <div class="container">
-            <!-- <div class="brand-logo">
-                <img src="images/logo.png" class="d-inline-block align-top product_img" alt="">
-            </div> -->
+            <div class="brand-logo">
+                <img src="files/icon.png" class="d-inline-block align-top product_img" alt="">
+            </div>
             <div class="brand-name text-center">
                 <span class="fontsforweb_fontid_2802"><strong>SAFEWAY</strong></span>
             </div>
@@ -70,7 +68,7 @@
         <section id="about">
             <div class="container text-center">
                 <div class="navbar sub">
-                    <p>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ്</p>
+                    <p><b>സേഫ്‌വേ സൂപ്പർമാർക്കറ്റ് - HOME DELIVERY SERVICE</b></p>
                     <p><b>EDAVANNAPPARA <a href="tel:+919745067846">9745067846</a></b></p>
                     <p>Delivery free for purchasing above ₹500/-</p>
                 </div>
